# esp-idf-cc2500

./: README.md
ArduinoCode/: README.md
ArduinoCode/CC2500_ping/: CC2500_ping.ino
ArduinoCode/CC2500_pong/: CC2500_pong.ino
ArduinoCode/CC2500_receive/: CC2500_receive.ino
ArduinoCode/CC2500_transmitte/: CC2500_transmitte.ino
PingPong/: README.md
PingPong/main/: CMakeLists.txt  main.c
basic/: README.md
basic/main/: Kconfig.projbuild  main.c
components/cc2500/: CMakeLists.txt  Kconfig.projbuild  cc2500.c  cc2500.h  cc2500_REG.h  cc2500_VAL.h
http/: README.md
http/main/: CMakeLists.txt  Kconfig.projbuild  http_client.c  http_server.c  main.c
https/: README.md
https/main/: main.c
mqtt/: README.md
mqtt/main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt_sub.c
nimble/: README.md
nimble/main/: main.c
ping-pong/: README.md
ping-pong/main/: main.c
ssl/: README.md
ssl/main/: main.c
tests/: test_invariant_cdc_acm_vcp.cpp
tusb-serial/: README.md  read.py
tusb-serial/main/: CMakeLists.txt  main.c
vcp/: README.md
vcp/main/: cdc_acm_vcp.cpp  main.c
web-form/: CMakeLists.txt  README.md
web-form/html/: root.html
web-form/main/: main.c
ws/: README.md
ws/main/: CMakeLists.txt  main.c  ws_client.c  ws_server.c
